# benchbench

./: .buildinfo  .gitignore  LICENSE.txt  MANIFEST.in  README.md  benchmark_detail.html  data.html  generate.ipynb  genindex.html  index.html  leaderboard.html  measures.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  style.css  submit.html  utils.html
.doctrees/: data.doctree  environment.pickle  index.doctree  measures.doctree  utils.doctree
.github/workflows/: python-docs.yml  python-publish.yml
_modules/: index.html
_modules/benchbench/: data.html
_sources/: data.rst.txt  index.rst.txt  utils.rst.txt
benchbench/data/: __init__.py
benchbench/measures/: cardinal.py  ordinal.py
benchbench/utils/: base.py  metric.py  win_rate.py
data/: cardinal_MRC.json  cardinal_tau.json  ordinal_MRC.json  ordinal_tau.json
data/after/: BigBenchHard.csv  BigCode.csv  GLUE.csv  HEIM-aesthetics_auto.csv  HEIM-aesthetics_human.csv  HEIM-alignment_auto.csv  HEIM-alignment_human.csv  HEIM-nudity.csv  HEIM-quality_auto.csv  HEIM-quality_human.csv  HELM-accuracy.csv  HELM-fairness.csv  HELM-robustness.csv  MMLU.csv  MTEB.csv  OpenLLM.csv  SuperGLUE.csv  VTAB.csv
data/before/: BigBenchHard.csv  BigCode.csv  GLUE.csv  HEIM-aesthetics_auto.csv  HEIM-aesthetics_human.csv  HEIM-alignment_auto.csv  HEIM-alignment_human.csv  MMLU.csv  (+10 more)
docs/: conf.py
documentation/: .buildinfo  data.html  genindex.html  index.html  measures.html  py-modindex.html  search.html  searchindex.js  utils.html
examples/: banner.ipynb  cardinal.ipynb  ordinal.ipynb
(+75 files in other folders)
